src/test/deca/syntax/valid/ThisNoSelection.deca
//This sans sélection

{
    this ;
}
