src/test/deca/syntax/invalid/IncompleteSelection.deca
//Selection incomplète,il manque une partie 

{
    this. ;
}
